[package]
name = "pwsafer"
version = "0.1.3"
authors = ["Gabriel Vukovic <gabriel.vukovic@student.tugraz.at>"]
description = "A library for reading and writing Password Safe databases.\n"
documentation = "https://docs.rs/pwsafer/"
readme = "README.md"
keywords = ["password"]
categories = ["cryptography"]
license = "Unlicense"
repository = "https://github.com/1uckyPh4nt0m/pwsafer"
homepage = "https://github.com/1uckyPh4nt0m/pwsafer"

[dependencies.block-modes]
version = "0.8.1"

[dependencies.byteorder]
version = "1"

[dependencies.hmac]
version = "0.11.0"

[dependencies.rand]
version = "0.8.4"

[dependencies.sha2]
version = "0.9.6"

[dependencies.twofish]
version = "0.6.0"
